// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButtonGroup matches snapshot with selectionMode multiple 1`] = `
<div
  aria-orientation="horizontal"
  className="sc-gsnTZi hmfeGJ"
  data-orientation="horizontal"
  data-rac=""
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  role="toolbar"
>
  <button
    aria-pressed={true}
    className="sc-dkzDqf kCUTAu"
    data-button-id="red"
    data-rac=""
    data-react-aria-pressable={true}
    data-selected={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Red
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="green"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Green
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="blue"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Blue
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="yellow"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Yellow
  </button>
  <button
    aria-pressed={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="orange"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Orange
  </button>
</div>
`;

exports[`ToggleButtonGroup matches snapshot with selectionMode single 1`] = `
<div
  aria-orientation="horizontal"
  className="sc-gsnTZi hmfeGJ"
  data-orientation="horizontal"
  data-rac=""
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  role="radiogroup"
>
  <button
    aria-checked={true}
    className="sc-dkzDqf kCUTAu"
    data-button-id="red"
    data-rac=""
    data-react-aria-pressable={true}
    data-selected={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Red
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="green"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Green
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="blue"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Blue
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="yellow"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Yellow
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="orange"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Orange
  </button>
</div>
`;

exports[`ToggleButtonGroup matches snapshot with selectionMode undefined 1`] = `
<div
  aria-orientation="horizontal"
  className="sc-gsnTZi hmfeGJ"
  data-orientation="horizontal"
  data-rac=""
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDownCapture={[Function]}
  role="radiogroup"
>
  <button
    aria-checked={true}
    className="sc-dkzDqf kCUTAu"
    data-button-id="red"
    data-rac=""
    data-react-aria-pressable={true}
    data-selected={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Red
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="green"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Green
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="blue"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Blue
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="yellow"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Yellow
  </button>
  <button
    aria-checked={false}
    className="sc-dkzDqf kCUTAu"
    data-button-id="orange"
    data-rac=""
    data-react-aria-pressable={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="radio"
    tabIndex={0}
    type="button"
  >
    Orange
  </button>
</div>
`;
